--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.3
 narwhals==1.40.0
 numpy==2.2.6
-opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
@@ -45,4 +45,3 @@ typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
 xyzservices==2025.4.0
-opencv-python-headless
